Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-10610

[C++] arrow-utility-test and arrow-csv-test causes failures on a big-endian platform

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 3.0.0
    • 3.0.0
    • C++

    Description

      After https://github.com/apache/arrow/pull/8494 has been merged, the following tests, which use 1eN format, cause failures.

      [ RUN      ] FloatingPointConversion.Basics
      /arrow/cpp/src/arrow/testing/gtest_util.cc:128: Failure
      Failed
      @@ -1, +1 @@
      --1e+30
      +0
      [  FAILED  ] FloatingPointConversion.Basics (3 ms)
      
      ...
      
      [ RUN      ] StringConversion.ToFloat
      /arrow/cpp/src/arrow/util/value_parsing_test.cc:35: Failure
      Expected equality of these values:
        out
          Which is: 0
        expected
          Which is: -1e+20
      Conversion failed for '-1e20'
      [  FAILED  ] StringConversion.ToFloat (0 ms)
      

      Attachments

        Activity

          People

            apitrou Antoine Pitrou
            kiszk Kazuaki Ishizaki
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 3h 40m
                3h 40m