ARROW-10610: [C++] Updated vendored fast_float version to latest

This should fix the big endian (s390x) CI failures.